--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmacaoPagamentoParcela.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmacaoPagamentoParcela.xaml
@@ -67,7 +67,7 @@
                   FontFamily="Champagne &amp; Limousines" 
                   FontSize="18"
                   Foreground="#FF1F3D68"
-                  VerticalAlignment="Center" />
+                  VerticalAlignment="Center" TabIndex="0" />
         </Grid>
 
         <Grid Grid.Row="2">
@@ -83,7 +83,7 @@
                   FontFamily="Champagne &amp; Limousines" 
                   FontSize="18"
                   Foreground="#FF1F3D68"
-                  VerticalAlignment="Center" LostFocus="txtJurosPorcentagem_LostFocus" 
+                  VerticalAlignment="Center" LostFocus="txtJurosPorcentagem_LostFocus" TabIndex="1" PreviewTextInput="txtJurosPorcentagem_PreviewTextInput" PreviewKeyDown="txtJurosPorcentagem_PreviewKeyDown" 
                  />
             <TextBox
                   x:Name="txtJurosValor"
@@ -93,7 +93,7 @@
                   FontFamily="Champagne &amp; Limousines" 
                   FontSize="18"
                   Foreground="#FF1F3D68"
-                  VerticalAlignment="Center" LostFocus="txtJurosValor_LostFocus"/>
+                  VerticalAlignment="Center" LostFocus="txtJurosValor_LostFocus" TabIndex="2" PreviewTextInput="txtJurosValor_PreviewTextInput" PreviewKeyDown="txtJurosValor_PreviewKeyDown"/>
         </Grid>
 
         <Grid Grid.Row="3">
@@ -109,7 +109,7 @@
                   FontFamily="Champagne &amp; Limousines" 
                   FontSize="18"
                   Foreground="#FF1F3D68"
-                  VerticalAlignment="Center" LostFocus="txtDescontoPorcentagem_LostFocus" 
+                  VerticalAlignment="Center" LostFocus="txtDescontoPorcentagem_LostFocus" TabIndex="3" PreviewTextInput="txtDescontoPorcentagem_PreviewTextInput" PreviewKeyDown="txtDescontoPorcentagem_PreviewKeyDown" 
                  />
             <TextBox
                   x:Name="txtDescontoValor"
@@ -119,7 +119,7 @@
                   FontFamily="Champagne &amp; Limousines" 
                   FontSize="18"
                   Foreground="#FF1F3D68"
-                  VerticalAlignment="Center" LostFocus="txtDescontoValor_LostFocus"/>
+                  VerticalAlignment="Center" LostFocus="txtDescontoValor_LostFocus" TabIndex="4" PreviewTextInput="txtDescontoValor_PreviewTextInput" PreviewKeyDown="txtDescontoValor_PreviewKeyDown"/>
         </Grid>
 
         <Grid Grid.Row="4">
@@ -145,7 +145,7 @@
                   FontFamily="Champagne &amp; Limousines" 
                   FontSize="18"
                   Foreground="#FF1F3D68"
-                  VerticalAlignment="Center" KeyDown="txtValorPago_KeyDown"/>
+                  VerticalAlignment="Center" KeyDown="txtValorPago_KeyDown" TabIndex="5" PreviewTextInput="txtValorPago_PreviewTextInput" PreviewKeyDown="txtValorPago_PreviewKeyDown"/>
         </Grid>
 
         <Grid Grid.Row="5">
@@ -172,7 +172,7 @@
                    FontFamily="Champagne &amp; Limousines" 
                    FontSize="18"
                    Foreground="#FF1F3D68" 
-                   VerticalAlignment="Center"/>
+                   VerticalAlignment="Center" TabIndex="6"/>
         </Grid>
 
 
@@ -186,7 +186,7 @@
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                     Height="50" Width="50" 
                     Background="#FF1F3D68" 
-                    HorizontalAlignment="Right" BorderBrush="#FF1F3D68" Click="btConfirmar_Click" >
+                    HorizontalAlignment="Right" BorderBrush="#FF1F3D68" Click="btConfirmar_Click" TabIndex="7" >
                 <materialDesign:PackIcon 
                     Kind="Check"  
                     Width="50" 
@@ -197,7 +197,7 @@
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                     Height="50" Width="50" 
                     Background="#FF1F3D68" 
-                    HorizontalAlignment="Left" BorderBrush="#FF1F3D68" RenderTransformOrigin="0.5,0.504" Click="btCancelar_Click" >
+                    HorizontalAlignment="Left" BorderBrush="#FF1F3D68" RenderTransformOrigin="0.5,0.504" Click="btCancelar_Click" TabIndex="8" >
                 <materialDesign:PackIcon 
                     Kind="ExitToApp"  
                     Width="50" 
