--- a/CFP.App/Formularios/ModeloBase/UserControls/UserControlFinanceiros.xaml
+++ b/CFP.App/Formularios/ModeloBase/UserControls/UserControlFinanceiros.xaml
@@ -30,7 +30,7 @@
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch" 
                     ToolTip="Visualização do Caixa"
-                    Margin="10 0 10 0">
+                    Margin="10 0 10 0" Click="btCaixa_Click">
                 <materialDesign:PackIcon
                     Kind="CashRegister"
                     Width="70"
