--- a/CFP.App/Formularios/Financeiros/UserControlContas.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlContas.xaml
@@ -607,20 +607,11 @@
                                         Content="Lista"/>
                                 </Grid>
                                 <Grid Grid.Column="1"  Margin="5 5 10 5">
-                                    <!--<ItemsControl x:Name="ListaArquivos">
-                                        <TextBlock
-                                             Text="Lista de Arquivos"
-                                             Background="#FF1F3D68"
-                                             Foreground="White"
-                                             FontFamily="Champagne &amp; Limousines"
-                                             FontSize="20"
-                                             FontWeight="SemiBold"/>
-                                    </ItemsControl>-->
                                     <ListView x:Name="lstArquivos" 
                                               FontFamily="Champagne &amp; Limousines" 
                                               FontSize="15" 
                                               Foreground="#FF1F3D68"
-                                              Style="{StaticResource MaterialDesignChoiceChipListBox}">
+                                              Style="{StaticResource MaterialDesignChoiceChipListBox}" MouseDoubleClick="lstArquivos_MouseDoubleClick">
                                         
                                     </ListView>
                                 </Grid>
