Busca de imagens botao concluído, imagens salva  caminho no banco e arquivos ficam salvos em pasta determinada pelo usuario nas configuracoes do sistema.

--- a/CFP.App/Formularios/Financeiros/UserControlContas.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlContas.xaml
@@ -512,7 +512,7 @@
 
                     </TabItem>
                     <TabItem x:Name="tabItemArquivos" Header="Arquivos">
-                        <Grid>
+                        <Grid x:Name="GridArquivos">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="80"/>
                                 <RowDefinition/>
